# language-models

./: .gitignore  README.md  pyproject.toml
datasets/p2/: zdania_z_wariantami.txt
datasets/riddles/: plwiktionary_definitions_clean.txt
src/lab1/: __init__.py  chatbot.py  main.py  sentence_probability.py  z2.py  z3.py  z4.py
src/lab2/: main.py  z1.ipynb  z2.ipynb  z3.ipynb  z4.ipynb  zagadki.ipynb
src/lab3/: herbert.ipynb  z1a.ipynb  z1b.ipynb  z1c.ipynb  z2.ipynb
src/lab4/: demo_add.ipynb  z1.ipynb  z2.ipynb
